[gd_scene load_steps=8 format=2]

[ext_resource path="res://Area For.tscn" type="PackedScene" id=1]
[ext_resource path="res://cards/desk.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://GameCardDeck.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/NotCourierSans-Bold.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 110
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 176.0, 245.0 ],
"_edit_vertical_guides_": [ 659.0, 221.0, 440.0, 495.0 ]
}

[node name="39Bc028C7F46Eafd" type="Sprite" parent="."]
position = Vector2( 450, 300.5 )
scale = Vector2( 0.598667, 0.612308 )
texture = ExtResource( 2 )

[node name="Area For" parent="." instance=ExtResource( 1 )]
position = Vector2( 145, 117 )
scale = Vector2( 1.03213, 0.762418 )
type = "auto"

[node name="Area For2" parent="." instance=ExtResource( 1 )]
position = Vector2( 147, 299 )
scale = Vector2( 1.03213, 0.762418 )
type = "auto"

[node name="Area For3" parent="." instance=ExtResource( 1 )]
position = Vector2( 146, 485 )
scale = Vector2( 1.03213, 0.762418 )
type = "auto"

[node name="Area For4" parent="." groups=["enemy"] instance=ExtResource( 1 )]
position = Vector2( 734, 118 )
scale = Vector2( 1.03213, 0.762418 )
full = true
type = "auto"

[node name="Area For5" parent="." groups=["enemy"] instance=ExtResource( 1 )]
position = Vector2( 734, 300 )
scale = Vector2( 1.03213, 0.762418 )
full = true
type = "auto"

[node name="Area For6" parent="." groups=["enemy"] instance=ExtResource( 1 )]
position = Vector2( 735, 486 )
scale = Vector2( 1.03213, 0.762418 )
full = true
type = "auto"

[node name="Area For7" parent="." instance=ExtResource( 1 )]
position = Vector2( 606, 386 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
type = "no_auto"

[node name="Area For8" parent="." instance=ExtResource( 1 )]
position = Vector2( 495, 386 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
type = "no_auto"

[node name="Area For9" parent="." instance=ExtResource( 1 )]
position = Vector2( 386, 387 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
type = "no_auto"

[node name="Area For10" parent="." instance=ExtResource( 1 )]
position = Vector2( 274, 385 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
type = "no_auto"

[node name="Area For11" parent="." groups=["enemy"] instance=ExtResource( 1 )]
position = Vector2( 274, 76 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
full = true
type = "no_auto"

[node name="Area For12" parent="." groups=["enemy"] instance=ExtResource( 1 )]
position = Vector2( 385, 75 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
full = true
type = "no_auto"

[node name="Area For13" parent="." groups=["enemy"] instance=ExtResource( 1 )]
position = Vector2( 494, 76 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
full = true
type = "no_auto"

[node name="Area For14" parent="." groups=["enemy"] instance=ExtResource( 1 )]
position = Vector2( 606, 75 )
rotation = 1.5708
scale = Vector2( 1.03213, 0.762418 )
full = true
type = "no_auto"

[node name="Button" type="Button" parent="."]
margin_left = 4.0
margin_top = 7.0
margin_right = 216.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 4 )
text = "Конец хода"

[node name="ProgressPlayer1" type="ProgressBar" parent="."]
margin_left = 17.0
margin_top = 387.0
margin_right = 236.0
margin_bottom = 428.0
rect_rotation = -90.0
max_value = 15.0
allow_greater = true

[node name="ProgressPlayer2" type="ProgressBar" parent="."]
margin_left = 871.0
margin_top = 212.0
margin_right = 1095.0
margin_bottom = 252.0
rect_rotation = 90.0
max_value = 15.0

[node name="GameCardDeck" parent="." instance=ExtResource( 5 )]
position = Vector2( 606, 235 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 4

[node name="Label" type="Label" parent="Node2D"]
visible = false
margin_right = 897.0
margin_bottom = 597.0
custom_fonts/font = SubResource( 1 )
text = "ВЫ ПОБЕДИЛИ"
align = 1
valign = 1

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="value_changed" from="ProgressPlayer1" to="." method="_on_ProgressPlayer1_value_changed"]
